--- a/demo.html
+++ b/demo.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <title>JavaScript Markdown Editor - SimpleMDE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+
+  <link rel="stylesheet" type="text/css" href="https://simplemde.com/stylesheets/normalize.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="https://simplemde.com/stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="https://simplemde.com/stylesheets/github-light.css" media="screen">
+
   <link rel="canonical" href="https://simplemde.com/" />
 
   <style>
@@ -57,7 +59,19 @@ Unordered lists can be started using the toolbar or by typing `* `, `- `, or `+ 
 2. ...work too!
 
 ## What about images?
-![Yes](https://i.imgur.com/sZlktY7.png)</textarea>
+![Yes](https://i.imgur.com/sZlktY7.png)
+
+
+## What about python code ?
+```python
+if 1+2 == 3:
+  print ("yes")
+  for i in range(23):
+    pass
+```
+
+
+</textarea>
     <h1><a id="h1_demo2" class="anchor" href="#h1_demo2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Autosaving</h1>
     <textarea id="demo2"># This one autosaves!
 By default, it saves every 10 seconds, but this can be changed. When this textarea is included in a form, it will automatically forget the saved value when the form is submitted.</textarea>
