ellipsys data-url images

--- a/demo.html
+++ b/demo.html
@@ -61,6 +61,9 @@ Unordered lists can be started using the toolbar or by typing `* `, `- `, or `+ 
 ## What about images?
 ![Yes](https://i.imgur.com/sZlktY7.png)
 
+and inline images ?
+
+![img](data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7). ok
 
 ## What about python code ?
 ```python
